# IPP

./: .gitignore  CMakeLists.txt  README.md
include/: gui.h  image_manipulation.h
lib/: image_manipulation.c
lib/gui/: gui.c
lib/img/: image_manipulation.c
src/: MyApp.cpp  main.c
